Fix dark mode using color modes

--- a/themes/wc-eh-docs/assets/scss/custom/_custom.scss
+++ b/themes/wc-eh-docs/assets/scss/custom/_custom.scss
@@ -19,3 +19,8 @@
 .copy-hash {
   font-size: 10pt !important;
 }
+
+.card-title .summary-title-link {
+  color: inherit;
+  text-decoration: none;
+}
